tests/ui/delegation/impl-reuse-self-hygiene.stderr
error[E0424]: expected value, found module `self`
  --> $DIR/impl-reuse-self-hygiene.rs:21:76
   |
LL | macro_rules! one_line_reuse { ($self:ident) => { reuse impl Trait for S1 { $self.0 } } }
   |                                                  --------------------------^^^^^----
   |                                                  |                         |
   |                                                  |                         `self` value is a keyword only available in methods with a `self` parameter
   |                                                  `self` not allowed in an implementation
...
LL | one_line_reuse!(self);
   | --------------------- in this macro invocation
   |
   = note: this error originates in the macro `one_line_reuse` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0424]: expected value, found module `self`
  --> $DIR/impl-reuse-self-hygiene.rs:21:76
   |
LL | macro_rules! one_line_reuse { ($self:ident) => { reuse impl Trait for S1 { $self.0 } } }
   |                                                  --------------------------^^^^^----
   |                                                  |                         |
   |                                                  |                         `self` value is a keyword only available in methods with a `self` parameter
   |                                                  `self` not allowed in an implementation
...
LL | one_line_reuse!(self);
   | --------------------- in this macro invocation
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
   = note: this error originates in the macro `one_line_reuse` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0424]: expected value, found module `self`
  --> $DIR/impl-reuse-self-hygiene.rs:28:22
   |
LL | macro_rules! one_line_reuse_expr { ($x:expr) => { reuse impl Trait for S2 { $x } } }
   |                                                   ------------------------------ `self` not allowed in an implementation
LL | one_line_reuse_expr!(self.0);
   |                      ^^^^ `self` value is a keyword only available in methods with a `self` parameter

error[E0424]: expected value, found module `self`
  --> $DIR/impl-reuse-self-hygiene.rs:28:22
   |
LL | macro_rules! one_line_reuse_expr { ($x:expr) => { reuse impl Trait for S2 { $x } } }
   |                                                   ------------------------------ `self` not allowed in an implementation
LL | one_line_reuse_expr!(self.0);
   |                      ^^^^ `self` value is a keyword only available in methods with a `self` parameter
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0424]: expected value, found module `self`
  --> $DIR/impl-reuse-self-hygiene.rs:35:23
   |
LL | macro_rules! one_line_reuse_expr2 { ($x:expr) => { reuse impl Trait for s3!() { $x } } }
   |                                                    --------------------------------- `self` not allowed in an implementation
LL | one_line_reuse_expr2!(self.0);
   |                       ^^^^ `self` value is a keyword only available in methods with a `self` parameter

error[E0424]: expected value, found module `self`
  --> $DIR/impl-reuse-self-hygiene.rs:35:23
   |
LL | macro_rules! one_line_reuse_expr2 { ($x:expr) => { reuse impl Trait for s3!() { $x } } }
   |                                                    --------------------------------- `self` not allowed in an implementation
LL | one_line_reuse_expr2!(self.0);
   |                       ^^^^ `self` value is a keyword only available in methods with a `self` parameter
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0424`.
